--- a/web/templates/contribute.html
+++ b/web/templates/contribute.html
@@ -29,6 +29,10 @@
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <form method="post">
+                            {% csrf_token %}
+                            <button type="submit" name="logout" value="1" class="btn btn-secondary btn-sm">logout</button>
+                        </form>
                     </ul>
                 </div>
             </div>
@@ -40,10 +44,6 @@
                     <div class="col-lg-8 align-self-end">
                         <h1 class="text-white font-weight-bold">Your Favorite Place for Free Bootstrap Themes</h1>
                         <hr class="divider" />
-                    </div>
-                    <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
-                        <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
                     </div>
                 </div>
             </div>
