--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
+
 <html lang="en">
 <head>
 	<title>Login V4</title>
@@ -33,20 +34,26 @@
 	<div class="limiter">
 		<div class="container-login100" style="background-image: linear-gradient(to bottom, rgba(137, 151, 161, 0.8) 0%, rgba(137, 151, 161, 0.8) 100%), url(/static/assets/img/bg-login.jpg);">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
-				<form class="login100-form validate-form">
+				<form class="login100-form validate-form" method="post">
+                    {% csrf_token %}
 					<span class="login100-form-title p-b-49">
 						Login
 					</span>
-
+                    <center>
+                    {% if ctx %}
+                        <p>{{ ctx }}</p>
+                    {% endif %}
+                    <br>
+                    </center>
 					<div class="wrap-input100 validate-input m-b-23" data-validate = "Email is Required">
 						<span class="label-input100">Email</span>
-						<input class="input100" type="text" name="username" placeholder="Type your email">
+						<input class="input100" type="text" name="email" placeholder="Type your email">
 						<span class="focus-input100" data-symbol="&#xf206;"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Password is required">
 						<span class="label-input100">Password</span>
-						<input class="input100" type="password" name="pass" placeholder="Type your password">
+						<input class="input100" type="password" name="password" placeholder="Type your password">
 						<span class="focus-input100" data-symbol="&#xf190;"></span>
 					</div>
 					
@@ -59,7 +66,7 @@
 					<div class="container-login100-form-btn">
 						<div class="wrap-login100-form-btn">
 							<div class="login100-form-bgbtn"></div>
-							<button class="login100-form-btn">
+							<button type="submit" class="login100-form-btn">
 								Login
 							</button>
 						</div>
@@ -70,7 +77,7 @@
                     <div class="wrap-login100-form-btn">
                         <div class="login100-form-bgbtn"></div>
                         <a href="/register">
-                            <button type="submit" class="login100-form-btn">
+                            <button  class="login100-form-btn">
                                 Register Instead
                             </button>
                         </a>
