--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -33,26 +33,29 @@
 	<div class="limiter">
 		<div class="container-login100" style="background-image: linear-gradient(to bottom, rgba(137, 151, 161, 0.8) 0%, rgba(137, 151, 161, 0.8) 100%), url(/static/assets/img/bg-login.jpg);">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
-				<form class="login100-form validate-form">
+				<form class="login100-form validate-form" method="post">
+					{% csrf_token %}
 					<span class="login100-form-title p-b-49">
 						Register
 					</span>
-
-					<div class="wrap-input100 validate-input m-b-23" data-validate = "Username is reauired">
+					{% if ctx %}
+					<p>{{ ctx }}</p>
+					{% endif %}
+					<div class="wrap-input100 validate-input m-b-23" data-validate = "Email is Required">
 						<span class="label-input100">Email</span>
-						<input class="input100" type="text" name="username" placeholder="Type your username">
+						<input class="input100" type="text" name="email" placeholder="Type your email">
 						<span class="focus-input100" data-symbol="&#xf206;"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Password is required">
 						<span class="label-input100">Password</span>
-						<input class="input100" type="password" name="pass" placeholder="Type your password">
+						<input class="input100" type="password" name="password" placeholder="Type your password">
 						<span class="focus-input100" data-symbol="&#xf190;"></span>
 					</div>
 					<br>
 					<div class="wrap-input100 validate-input" data-validate="Password is required">
 						<span class="label-input100">Confirm Password</span>
-						<input class="input100" type="password-confirm" name="pass-confirm" placeholder="Type your password again">
+						<input class="input100" type="password" name="confirm-password" placeholder="Type your password again">
 						<span class="focus-input100" data-symbol="&#xf190;"></span>
 					</div>
 
@@ -79,21 +82,21 @@
 	<div id="dropDownSelect1"></div>
 	
 <!--===============================================================================================-->
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+	<script src="{% static 'vendor/jquery/jquery-3.2.1.min.js' %}"></script>
 <!--===============================================================================================-->
-	<script src="vendor/animsition/js/animsition.min.js"></script>
+	<script src="{% static 'vendor/animsition/js/animsition.min.js' %}"></script>
 <!--===============================================================================================-->
-	<script src="vendor/bootstrap/js/popper.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+	<script src="{% static 'vendor/bootstrap/js/popper.js' %}"></script>
+	<script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
 <!--===============================================================================================-->
-	<script src="vendor/select2/select2.min.js"></script>
+	<script src="{% static 'vendor/select2/select2.min.js' %}"></script>
 <!--===============================================================================================-->
-	<script src="vendor/daterangepicker/moment.min.js"></script>
-	<script src="vendor/daterangepicker/daterangepicker.js"></script>
+	<script src="{% static 'vendor/daterangepicker/moment.min.js' %}"></script>
+	<script src="{% static 'vendor/daterangepicker/daterangepicker.js' %}"></script>
 <!--===============================================================================================-->
-	<script src="vendor/countdowntime/countdowntime.js"></script>
+	<script src="{% static 'vendor/countdowntime/countdowntime.js' %}"></script>
 <!--===============================================================================================-->
-	<script src="js/main.js"></script>
+	<script src="{% static 'js/login-main.js' %}"></script>
 
 </body>
 </html>
