--- a/web/templates/pollution.html
+++ b/web/templates/pollution.html
@@ -49,8 +49,8 @@
 					{% csrf_token %}
 					{% bootstrap_form form %}
 					<div class="wrap-input100 validate-input" data-validate="Password is required">
-						<span class="label-input100">What type of animal is it?</span>
-						<input class="input100" type="text" name="animal_name" placeholder="Type the animal's name:">
+						<span class="label-input100">Add a description of the polluted area:</span>
+						<input class="input100" type="text" name="pollution_name" placeholder="Type the animal's name:">
 					</div><br>
 
 					<div class="container-login100-form-btn">
