--- a/web/templates/contribute.html
+++ b/web/templates/contribute.html
@@ -23,7 +23,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark py-3" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#page-top" style="color: rgba(105, 105, 105, 1);">Alive Nevada</a>
+                <a class="navbar-brand" href="/" style="color: rgba(105, 105, 105, 1);">Alive Nevada</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
@@ -43,7 +43,7 @@
             <div class="container-fluid p-0">
                 <div class="row g-0">
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="/animals" title="Project Name">
+                        <a class="portfolio-box" href="/animals" title="Animals">
                             <img class="img-fluid" src="{% static 'assets/img/portfolio/sheep.png' %}" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Report</div>
@@ -52,7 +52,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="{% static 'assets/img/portfolio/trash.png' %}" title="Project Name">
+                        <a class="portfolio-box" href="/pollution" title="Pollution">
                             <img class="img-fluid" src="{% static 'assets/img/portfolio/trash.png' %}" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Report</div>
@@ -61,7 +61,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="{% static 'assets/img/portfolio/hogs.png' %}" title="Project Name">
+                        <a class="portfolio-box" href="{% static '/invasive' %}" title="Invasive Species">
                             <img class="img-fluid" src="{% static 'assets/img/portfolio/hogs.png' %}" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Report</div>
