--- a/web/templates/contribute.html
+++ b/web/templates/contribute.html
@@ -61,7 +61,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="{% static '/invasive' %}" title="Invasive Species">
+                        <a class="portfolio-box" href="/invasive" title="Invasive Species">
                             <img class="img-fluid" src="{% static 'assets/img/portfolio/hogs.png' %}" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Report</div>
