--- a/web/templates/invasive.html
+++ b/web/templates/invasive.html
@@ -53,6 +53,11 @@
 						<input class="input100" type="text" name="invasive_name" placeholder="Type the animal's name:">
 					</div><br>
 
+					<div class="wrap-input100 validate-input" data-validate="Password is required">
+						<span class="label-input100">Any other notes?</span>
+						<input class="input100" type="text" name="notes" placeholder="Type the animal's name:">
+					</div><br>
+
 					<div class="container-login100-form-btn">
 						<div class="wrap-login100-form-btn">
 							<div class="login100-form-bgbtn"></div>
