--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -43,7 +43,7 @@
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Help us keep Nevada beautiful simply by reporting things you see!</p>
+                        <p class="text-white-75 mb-5">Every observation contributes to protecting our environment, wildlife and plant species. Help us monitor and report wildlife activity. Your data will be used to study the wildlife habitat and behavior during climate change, hot summer months, and wildfires.</p>
                         <a class="btn btn-primary btn-xl" href="/contribute">Contribute</a>
                     </div>
                     <div class="image-credit">
