--- a/web/templates/animals.html
+++ b/web/templates/animals.html
@@ -57,7 +57,7 @@
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Password is required">
-						<span class="label-input100">What type of animal is it?</span>
+						<span class="label-input100">What type of animal is it? If you don't know, leave it blank, our AI will identify it.</span>
 						<input class="input100" type="text" name="animal_name" placeholder="Type the animal's name:">
 					</div><br>
 
