titles and display classification

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -134,9 +134,7 @@
                             <br><br>
                             You can help by keeping a lookout for the presence of wildlife in your neighborhood, grasslands and water bodies.
                             Create an account and simply log into the app to report your observation and upload a picture taken.
-                            If you cannot identify the animal, that is alright, enter unknown and upload a picture. We are in the process
-                            of building a AI (Artificial Intelligence) to identify the wildlife based on Nevada wildlife
-                            database.
+                            If you cannot identify the animal, that is alright, leave the field blank and upload a picture. We have an AI that will help you identify the animal.
                             <br><br>
                             If you need the crowdsourced data for your research, please contact us.
                         </p>
